# xreg

./: .dockerignore  CMakeLists.txt  FeaturesIndex.md  LICENSE  README.md  example_build_script  example_build_script_2  example_build_script_win.cmd
lib/: CMakeLists.txt
lib/basic_math/: CMakeLists.txt  xregBasicStats.cpp  xregBasicStats.h  xregDistInterface.cpp  xregDistInterface.h  xregFitQuadratic.cpp  xregFitQuadratic.h  xregFoldNormDist.cpp  xregFoldNormDist.h  xregLinAlgUtils.cpp  xregLinAlgUtils.h  xregLogNormDist.cpp  xregLogNormDist.h  xregMultivarNormDist.cpp  xregMultivarNormDist.h  xregMultivarNormDistFit.cpp  xregMultivarNormDistFit.h  xregNDRange.cpp  xregNDRange.h  xregNormDist.cpp  xregNormDist.h  xregNormDistFit.cpp  xregNormDistFit.h  xregNullDist.cpp  xregNullDist.h  xregPolyFindZeros.cpp  xregPolyFindZeros.h  xregPolyFit.cpp  xregPolyFit.h  xregSampleUniformUnitVecs.cpp  xregSampleUniformUnitVecs.h
lib/common/: CMakeLists.txt  xregAssert.cpp  xregAssert.h  xregCommon.h  xregCompareUtils.h  xregEndianUtils.cpp  xregEndianUtils.h  xregExceptionUtils.cpp  xregExceptionUtils.h  xregFilesystemUtils.cpp  xregFilesystemUtils.h  xregLandmarkMapUtils.cpp  xregLandmarkMapUtils.h  xregMesh.cpp  xregMesh.h  xregObjWithOStream.cpp  xregObjWithOStream.h  xregObjectUtils.h  xregProgOptUtils.cpp  xregProgOptUtils.h  xregSampleUtils.cpp  xregSampleUtils.h  xregScreenInfo.cpp  xregScreenInfo.h  xregScreenInfoMacOS.mm  xregSizedTypeUtils.h  xregStdStreamUtils.cpp  xregStdStreamUtils.h  xregStreams.cpp  xregStreams.h  xregStringUtils.cpp  xregStringUtils.h  xregTBBUtils.h  xregTimer.cpp  xregTimer.h  xregTypeUtils.h
lib/file_formats/: CMakeLists.txt  xregACSVUtils.cpp  xregACSVUtils.h  xregAppleAVFoundation.h  xregAppleAVFoundation.mm  xregCIOSFusionDICOM.cpp  xregCIOSFusionDICOM.h  xregCSVUtils.cpp  xregCSVUtils.h  xregDICOMUtils.cpp  xregDICOMUtils.h  xregFCSVUtils.cpp  xregFCSVUtils.h  xregH5CamModelIO.cpp  xregH5CamModelIO.h  xregH5MeshIO.cpp  xregH5MeshIO.h  xregH5PAOIO.cpp  xregH5PAOIO.h  xregH5ProjDataIO.cpp  xregH5ProjDataIO.h  xregH5SE3OptVarsIO.cpp  xregH5SE3OptVarsIO.h  xregLandmarkFiles.cpp  xregLandmarkFiles.h  xregMeshIO.cpp  xregMeshIO.h  xregPAOIO.cpp  xregPAOIO.h  xregRTKGeom.cpp  xregRTKGeom.h  xregRadRawProj.cpp  xregRadRawProj.h  xregReadProjDataFromDICOM.cpp  xregReadProjDataFromDICOM.h  xregReadProjDataFromDICOMDetail.h  xregSTLMeshIO.cpp  xregSTLMeshIO.h  xregSlicerMarkupsJSON.cpp  xregSlicerMarkupsJSON.h  (+4 more)
lib/hdf5/: CMakeLists.txt  xregHDF5.cpp  xregHDF5.h  xregHDF5Internal.h  xregHDF5ReadWriteInterface.h
lib/hip_surgery/: CMakeLists.txt  xregHipSegUtils.cpp  xregHipSegUtils.h  xregMetalObjSampling.cpp  xregMetalObjSampling.h  xregMetalObjs.cpp  xregMetalObjs.h  xregPAOCuts.cpp  xregPAOCuts.h  xregPAODrawBones.cpp  xregPAODrawBones.h  xregPAOVolAfterRepo.cpp  xregPAOVolAfterRepo.h  xregSegMetalInXRay.cpp  xregSegMetalInXRay.h
lib/image/: CMakeLists.txt  xregHUToLinAtt.cpp  xregHUToLinAtt.h  xregImageAddPoissonNoise.cpp  xregImageAddPoissonNoise.h  xregImageIntensLogTrans.cpp  xregImageIntensLogTrans.h  xregLabelWarping.cpp  xregLabelWarping.h  xregLocalContrastNorm.cpp  xregLocalContrastNorm.h  xregProjData.cpp  xregProjData.h  xregProjPreProc.cpp  xregProjPreProc.h  xregVariableSpacedSlices.cpp  xregVariableSpacedSlices.h
lib/itk/: CMakeLists.txt  xregITKBackgroundImageWriter.h  xregITKBasicImageUtils.cpp  xregITKBasicImageUtils.h  xregITKCropPadUtils.cpp  xregITKCropPadUtils.h  xregITKIOUtils.cpp  xregITKIOUtils.h  xregITKLabelUtils.cpp  xregITKLabelUtils.h  xregITKMathOps.h  xregITKOpenCVUtils.h  xregITKRemapUtils.cpp  xregITKRemapUtils.h  xregITKResampleUtils.h
lib/opencl/: CMakeLists.txt  xregOpenCLConvert.cpp  xregOpenCLConvert.h  xregOpenCLMath.cpp  xregOpenCLMath.h  xregOpenCLMiscKernels.cpp  xregOpenCLMiscKernels.h  xregOpenCLSpatial.cpp  xregOpenCLSpatial.h  xregOpenCLSys.cpp  xregOpenCLSys.h  xregViennaCLManager.cpp  xregViennaCLManager.h
lib/opencv/: CMakeLists.txt  xregOpenCVUtils.cpp  xregOpenCVUtils.h
lib/optim/: CMakeLists.txt  xregCMAESInterface.cpp  xregCMAESInterface.h  xregDiffEvo.cpp  xregDiffEvo.h  xregLineSearchOpt.cpp  xregLineSearchOpt.h  xregOptimTestObjFns.cpp  xregOptimTestObjFns.h  xregPSO.cpp  xregPSO.h  xregSimAnn.cpp  xregSimAnn.h
lib/ray_cast/: CMakeLists.txt  xregEdgesFromRayCast.cpp  xregEdgesFromRayCast.h  xregProj3DLabelsTo2D.cpp  xregProj3DLabelsTo2D.h  xregRayCastBaseCPU.cpp  xregRayCastBaseCPU.h  xregRayCastBaseOCL.cpp  xregRayCastBaseOCL.h  xregRayCastDepthCPU.cpp  xregRayCastDepthCPU.h  xregRayCastDepthOCL.cpp  xregRayCastDepthOCL.h  xregRayCastInterface.cpp  xregRayCastInterface.h  xregRayCastLineIntCPU.cpp  xregRayCastLineIntCPU.h  xregRayCastLineIntOCL.cpp  xregRayCastLineIntOCL.h  xregRayCastOccContourCPU.cpp  xregRayCastOccContourCPU.h  xregRayCastOccContourOCL.cpp  xregRayCastOccContourOCL.h  xregRayCastProgOpts.cpp  xregRayCastProgOpts.h  xregRayCastSparseCollCPU.cpp  xregRayCastSparseCollCPU.h  xregRayCastSurRenderCPU.cpp  xregRayCastSurRenderCPU.h  xregRayCastSurRenderOCL.cpp  xregRayCastSurRenderOCL.h  xregRayCastSyncBuf.cpp  xregRayCastSyncBuf.h  xregSplatLineIntCPU.cpp  xregSplatLineIntCPU.h
lib/regi/: CMakeLists.txt  xregICP3D3D.cpp  xregICP3D3D.h  xregPairedPointRegi3D3D.cpp  xregPairedPointRegi3D3D.h  xregSE3OptVars.cpp  xregSE3OptVars.h
lib/spatial/: CMakeLists.txt  xregFitCircle.cpp  xregFitCircle.h  xregFitCylinder.cpp  xregFitCylinder.h  xregFitPlane.cpp  xregFitPlane.h  xregKDTree.cpp  xregKDTree.h  xregSpatialPrimitives.cpp  xregSpatialPrimitives.h
lib/transforms/: CMakeLists.txt  xregAnatCoordFrames.cpp  xregAnatCoordFrames.h  xregPerspectiveXform.cpp  xregPerspectiveXform.h  xregPointCloudUtils.cpp  xregPointCloudUtils.h  xregRigidUtils.cpp  xregRigidUtils.h  xregRotUtils.cpp  xregRotUtils.h
lib/version/: CMakeLists.txt  xregVersionConfigVals.cpp.in  xregVersionInfo.cpp  xregVersionInfo.h
lib/vtk/: CMakeLists.txt  xregVTK3DPlotter.cpp  xregVTK3DPlotter.h  xregVTKBasicUtils.cpp  xregVTKBasicUtils.h  xregVTKITKUtils.cpp  xregVTKITKUtils.h  xregVTKMeshUtils.cpp  (+1 more)
(+220 files in other folders)
